// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button snapshot is matches the snapshot extra small state 1`] = `
<DocumentFragment>
  <button
    class="rounded-[6px] flex whitespace-nowrap justify-center items-center font-bold gap-1 h-[28px] py-2 px-4 text-xs bg-blue8 hover:bg-blue9 text-white disabled:bg-secondary2"
  />
</DocumentFragment>
`;

exports[`Button snapshot is matches the snapshot large state 1`] = `
<DocumentFragment>
  <button
    class="rounded-[6px] flex whitespace-nowrap justify-center items-center font-bold gap-1 h-[52px] py-3 px-8 text-base bg-blue8 hover:bg-blue9 text-white disabled:bg-secondary2"
  />
</DocumentFragment>
`;

exports[`Button snapshot is matches the snapshot loading state 1`] = `
<DocumentFragment>
  <button
    class="rounded-[6px] flex whitespace-nowrap justify-center items-center font-bold gap-1 h-[44px] py-2 px-6 text-sm bg-blue8 hover:bg-blue9 text-white disabled:bg-secondary2 cursor-not-allowed"
    disabled=""
  />
</DocumentFragment>
`;

exports[`Button snapshot is matches the snapshot medium state 1`] = `
<DocumentFragment>
  <button
    class="rounded-[6px] flex whitespace-nowrap justify-center items-center font-bold gap-1 h-[44px] py-2 px-6 text-sm bg-blue8 hover:bg-blue9 text-white disabled:bg-secondary2"
  />
</DocumentFragment>
`;

exports[`Button snapshot is matches the snapshot primary state 1`] = `
<DocumentFragment>
  <button
    class="rounded-[6px] flex whitespace-nowrap justify-center items-center font-bold gap-1 h-[44px] py-2 px-6 text-sm bg-blue8 hover:bg-blue9 text-white disabled:bg-secondary2"
  />
</DocumentFragment>
`;

exports[`Button snapshot is matches the snapshot secondary state 1`] = `
<DocumentFragment>
  <button
    class="rounded-[6px] flex whitespace-nowrap justify-center items-center font-bold gap-1 h-[44px] py-2 px-6 text-sm bg-secondary10 hover:bg-secondary1 text-white disabled:bg-secondary2"
  />
</DocumentFragment>
`;

exports[`Button snapshot is matches the snapshot small state 1`] = `
<DocumentFragment>
  <button
    class="rounded-[6px] flex whitespace-nowrap justify-center items-center font-bold gap-1 h-[32px] py-2 px-4 text-xs bg-blue8 hover:bg-blue9 text-white disabled:bg-secondary2"
  />
</DocumentFragment>
`;

exports[`Button snapshot is matches the snapshot tertiary state 1`] = `
<DocumentFragment>
  <button
    class="rounded-[6px] flex whitespace-nowrap justify-center items-center font-bold gap-1 h-[44px] py-2 px-6 text-sm border-neutral6 border bg-neutral1 hover:bg-secondary2 text-neutral8 disabled:bg-neutral3"
  />
</DocumentFragment>
`;

exports[`Button snapshot is mathces the snapshot disabled state 1`] = `
<DocumentFragment>
  <button
    class="rounded-[6px] flex whitespace-nowrap justify-center items-center font-bold gap-1 h-[44px] py-2 px-6 text-sm bg-blue8 hover:bg-blue9 text-white disabled:bg-secondary2 cursor-not-allowed"
    disabled=""
  />
</DocumentFragment>
`;
